--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -1,4 +1,29 @@
 {
+  "error": "Fehler",
+  "device": "Gerät",
+  "menuSetDevices": "Geräte",
+  "openChalRespHeader": "Challenge-Response",
+  "openChalRespLoading": "Liste mit YubiKeys wird geladen",
+  "openChalRespSelectYubiKey": "Wählen Sie den YubiKey aus, den Sie benutzen wollen",
+  "openChalRespErrorEmpty": "Keine YubiKeys gefunden.",
+  "detMenuCopyOtp": "Einmal-Code kopieren",
+  "detOtpField": "Einmal-Code",
+  "detOtpClickToTouch": "Zum Erzeugen hier klicken",
+  "detOtpGenerating": "Wird erzeugt...",
+  "detOtpTouch": "Berühren Sie Ihren {}",
+  "setGenFieldLabelDblClickAutoType": "Auto-Type durch anklicken von Beschriftungen aktivieren",
+  "setFileExportRaw": "Passwörter exportieren",
+  "setFileDeviceIntro": "Einmal-Codes aus diesem {} werden in der App angezeigt.",
+  "setFileExportRawBody": "Die Exportdatei wird Ihre Passwörter als unverschlüsselten Klartext enthalten. Möchten Sie fortfahren?",
+  "setFileDeviceSettings": "Einstellungen",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Keinen YubiKey benutzen",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileRefreshYubiKeyList": "Liste aktualisieren",
+  "setDevicesYubiKeyOtpTitle": "Einmal-Codes",
+  "setDevicesYubiKeyOtpDesc": "Ein YubiKey kann genutzt werden, um Einmal-Codes für verschiedene Dienste zu erzeugen.",
+  "setDevicesYubiKeyOtpAutoOpen": "Einmal-Codes automatisch laden, wenn Dateien geöffnet sind",
+  "setDevicesYubiKeyOtpMatchEntries": "Passende Einmal-Codes in den Einträgen anzeigen",
   "months": [
     "Januar",
     "Februar",
@@ -284,7 +309,7 @@
   "detMenuAddField": "{} hinzufügen",
   "detMenuCopyPassword": "Passwort kopieren",
   "detMenuCopyUser": "Benutzer kopieren",
-  "detSetupOtp": "Einmal-Passwörter",
+  "detSetupOtp": "Einmal-Codes",
   "detClone": "Kopie erstellen",
   "detCopyEntryToClipboard": "Alle Felder kopieren",
   "detClonedName": "Kopie",
@@ -313,7 +338,7 @@
   "detOtpQrError": "QR-Code Lesefehler",
   "detOtpQrErrorBody": "Der QR-Code konnte leider nicht eingelesen werden. Bitte versuchen Sie es noch einmal oder kontaktieren Sie den Hersteller mit Einzelheiten zum aufgetretenen Fehler.",
   "detOtpQrWrong": "Fehlerhafter QR-Code",
-  "detOtpQrWrongBody": "Ihr QR-Code wurde erfolgreich eingelesen, enthält jedoch kein Einmal-Passwort.",
+  "detOtpQrWrongBody": "Ihr QR-Code wurde erfolgreich eingelesen, enthält jedoch keinen Einmal-Code.",
   "detLockField": "Dieses Feld sperren, damit der Inhalt nicht durchsuchbar ist und angezeigt wird. Um ihn anzuzeigen, muss er angeklickt werden.",
   "detUnlockField": "Dieses Feld entsperren. Dies führt dazu, dass der Inhalt direkt angezeigt wird und durchsuchbar ist.",
   "detRevealField": "Anzeigen",
@@ -335,7 +360,7 @@
   "autoTypeSelectionHintAction": "Nur das Passwort eintippen",
   "autoTypeSelectionHintOpt": "Nur den Benutzernamen eintippen",
   "autoTypeSelectionHintShift": "Andere Felder",
-  "autoTypeSelectionOtp": "Einmal-Passwort",
+  "autoTypeSelectionOtp": "Einmal-Code",
   "appSecWarn": "Unsichere Verbindung!",
   "appSecWarnBody1": "Sie haben diese App über eine ungesicherte Verbindung geöffnet, Sie könnten beobachtet und Ihre Passwörter könnten gestohlen werden. Wir empfehlen Ihnen dringend, die App hier nicht weiter zu nutzen, wenn Sie nicht genau wissen, was Sie tun.",
   "appSecWarnBody2": "Ihre Datenbank ist zwar verschlüsselt, aber es kann nicht sichergestellt werden, dass die App nicht auf dem Web vom Server zu Ihrem Browser manipuliert wurde.",
@@ -459,7 +484,7 @@
   "setFileSyncInProgress": "Synchronisierung läuft",
   "setFileSyncError": "Synchronisierungsfehler",
   "setFilePass": "Hauptpasswort",
-  "setFileConfirmPass": "Hauptpasswort bestätigen",
+  "setFileConfirmPass": "Masterpasswort bestätigen",
   "setFilePassChange": "Um das Passwort zu ändern, geben Sie es im Bestätigungsfeld an",
   "setFilePassChanged": "Das Passwort wurde geändert. Lassen Sie das Feld leer, um das bisherige Passwort zu behalten.",
   "setFilePassNotMatch": "Die Passwörter stimmen nicht überein, bitte geben Sie sie erneut ein",
@@ -579,7 +604,7 @@
   "setHelpProblems1": "Falls etwas schief geht, {}",
   "setHelpProblems2": "oder {}",
   "setHelpOpenIssue": "eröffnen Sie bitte ein Ticket auf GitHub (englisch)",
-  "setHelpContactLink": "kontaktieren Sie einen Entwickler direkt",
+  "setHelpContactLink": "kontaktieren Sie den Entwickler direkt",
   "setHelpAppInfo": "App-Informationen",
   "setHelpOtherPlatforms": "Andere Plattformen",
   "setHelpDesktopApps": "Deskop-Apps",
