--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -1,4 +1,54 @@
 {
+  "error": "fallo",
+  "device": "Dispositivo",
+  "menuSetDevices": "Dispositivos",
+  "openChalRespHeader": "Reto-Respuesta",
+  "openChalRespLoading": "Cargando la lista de YubiKeys",
+  "openChalRespSelectYubiKey": "Selecciona la YubiKey que deseas usar",
+  "openChalRespErrorEmpty": "No se han encontrado YubiKeys.",
+  "openChalRespErrorEmptyMac": "¿Es la primera vez que usas esta función en macOS? Debes añadir KeeWeb al apartado de «Monitorización de entrada» en los ajustes de seguridad de macOS.",
+  "detMenuCopyOtp": "Copiar código de un solo uso",
+  "detOtpField": "Código de un solo uso",
+  "detOtpClickToTouch": "Clic para generar",
+  "detOtpGenerating": "Generando ...",
+  "detOtpTouch": "Toca tu {}",
+  "setGenFieldLabelDblClickAutoType": "Autocompleta al hacer doble clic sobre las etiquetas de los campos",
+  "setFileExportRaw": "Exportando tus contraseñas",
+  "setFileDeviceIntro": "Los códigos de un solo uso de este {} se mostrarán en la aplicación.",
+  "setFileExportRawBody": "El archivo exportado contendrá contraseñas sin cifrado de ningún tipo. ¿Seguro que deseas continuar?",
+  "setFileDeviceSettings": "Ajustes",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "No usar YubiKey",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileRefreshYubiKeyList": "Recargar la lista",
+  "setFileYubiKeyBody": "Usar una YubiKey como parte de la contraseña maestra es peligroso y podrías perder el acceso a tus contraseñas si algo sale mal. ¿Has realizado una copia de seguridad de tu fichero antes de aplicar este cambio?",
+  "setFileYubiKeyErrorEmptyMac": "Parece que hay otra YubiKey conectada, pero no es visible. Debes añadir KeeWeb al apartado de «Monitorización de entrada» de los ajustes de seguridad de macOS para acceder a las YubiKeys.",
+  "setDevicesTitle": "Dispositivos",
+  "setDevicesEnableUsb": "Habilitar interacción con dispositivos USB",
+  "setDevicesYubiKeyIntro": "Se recomienda leer {} antes de usar una YubiKey.",
+  "setDevicesYubiKeyIntroLink": "este documento",
+  "setDevicesYubiKeyToolsDesc": "Para poder usar la YubiKey en este modo, necesitas instalar una herramienta llamada {}.",
+  "setDevicesYubiKeyToolsDesc2": "{} para obtener más información de esta herramienta.",
+  "setDevicesYubiKeyToolsDescLink": "Haz clic aquí",
+  "setDevicesYubiKeyToolsStatusChecking": "Comprobando si {} está instalado",
+  "setDevicesYubiKeyToolsStatusOk": "{} está instalado",
+  "setDevicesYubiKeyToolsStatusError": "{} no está instalado o no funciona",
+  "setDevicesYubiKeyOtpTitle": "Códigos de un solo uso",
+  "setDevicesYubiKeyOtpDesc": "YubiKey puede usarse para generar códigos de un solo uso para distintos servicios.",
+  "setDevicesYubiKeyOtpShowIcon": "Mostrar icono en la pantalla de inicio",
+  "setDevicesYubiKeyOtpAutoOpen": "Cargar automáticamente los códigos de un solo uso cuando haya archivos abiertos",
+  "setDevicesYubiKeyOtpMatchEntries": "Mostrar códigos de un solo uso coincidentes en las entradas",
+  "setDevicesYubiKeyChalRespTitle": "Reto-Respuesta",
+  "setDevicesYubiKeyChalRespDesc": "También se puede usar una YubiKey en modo reto-respuesta para que un fragmento de la clave privada usada para cifrar los archivos resida en la YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Mostrar la opción para usar una YubiKey al cargar los archivos",
+  "setDevicesYubiKeyStuckWorkaround": "Vuelve a conectar la YubiKey si parece haberse quedado bloqueada en el proceso de carga",
+  "setDevicesYubiKeyRememberChalResp": "Recordar el reto-respuesta mientras la aplicación esté abierta",
+  "yubiKeyStuckError": "La YubiKey parece estar bloqueada, puedes activar la reparación automática en los ajustes de la aplicación.",
+  "yubiKeyNoKeyHeader": "Se requiere una YubiKey",
+  "yubiKeyNoKeyBody": "Por favor, inserta la YubiKey con el número de serie {}",
+  "yubiKeySlot": "ranura",
+  "yubiKeyTouchRequestedHeader": "Toca tu YubiKey",
+  "yubiKeyTouchRequestedBody": "Por favor, toca tu YubiKey con el número de serie {}",
   "months": [
     "Enero",
     "Febrero",
@@ -230,7 +280,7 @@
   "openErrorFileNotFound": "Archivo no encontrado",
   "openListErrorBody": "Se ha producido un fallo al cargar la lista de archivos",
   "openShowAllFiles": "Mostrar todos los archivos",
-  "openFileNoCacheError": "Archivo no encontrado en el almacenamiento caché. Esto puede suceder por haber limpiado el caché del navegador. Para abrir el fichero, elimínalo de KeeWeb y añádelo de nuevo.",
+  "openFileNoCacheError": "Archivo no encontrado en el almacenamiento caché. Esto puede suceder por haber limpiado la caché del navegador. Para abrir el fichero, elimínalo de KeeWeb y añádelo de nuevo.",
   "detAttDownload": "Presiona mayús-clic sobre el botón para descargarlo o",
   "detAttDelToRemove": "Borrar para eliminar",
   "detAttSave": "Guardar como ...",
@@ -284,7 +334,7 @@
   "detMenuAddField": "Añadir {}",
   "detMenuCopyPassword": "Copiar contraseña",
   "detMenuCopyUser": "Copiar usuario",
-  "detSetupOtp": "Contraseñas de un solo uso",
+  "detSetupOtp": "Códigos de un solo uso",
   "detClone": "Hacer una copia",
   "detCopyEntryToClipboard": "Copiar todos los campos",
   "detClonedName": "Copiar",
@@ -313,7 +363,7 @@
   "detOtpQrError": "Fallo al escanear código QR",
   "detOtpQrErrorBody": "Perdón, no pudimos leer el código QR, por favor, vuelve a intentarlo o contacta a los autores de la aplicación con detalles sobre el fallo.",
   "detOtpQrWrong": "Código QR erróneo",
-  "detOtpQrWrongBody": "Se ha escaneado tu código QR pero no contiene información de contraseñas de un solo uso.",
+  "detOtpQrWrongBody": "Se ha escaneado tu código QR pero no contiene información de códigos de un solo uso.",
   "detLockField": "Bloquea este campo para que su contenido no sea visible ni localizable con una búsqueda. Para mostrar el contenido de este campo tendrás que hacer clic sobre él.",
   "detUnlockField": "Desbloquea este campo para hacer su contenido visible y localizable con una búsqueda.",
   "detRevealField": "Revelar",
@@ -335,7 +385,7 @@
   "autoTypeSelectionHintAction": "Introduce solamente la contraseña",
   "autoTypeSelectionHintOpt": "Introduce solamente el usuario",
   "autoTypeSelectionHintShift": "Otros campos",
-  "autoTypeSelectionOtp": "Contraseña de uso único",
+  "autoTypeSelectionOtp": "Código de un solo uso",
   "appSecWarn": "¡Inseguro!",
   "appSecWarnBody1": "Has cargado esta aplicación mediante una conexión insegura. Alguien podría estar observando tu tráfico y robando tus contraseñas. Te aconsejamos no continuar, a no ser que comprendas perfectamente lo que estás haciendo.",
   "appSecWarnBody2": "Sí, tu base de datos está cifrada, pero nadie te puede garantizar que la aplicación no haya sido modificada antes de llegar a ti.",
@@ -347,8 +397,8 @@
   "appCannotLock": "Tienes cambios sin guardar que se perderán. ¿Continuar?",
   "appAutoSave": "Guardar cambios automáticamente",
   "appSaveError": "Fallo al guardar",
-  "appSaveErrorBody": "Fallo al auto-guardar el archivo",
-  "appSaveErrorBodyMul": "Fallo al auto-guardar archivos:",
+  "appSaveErrorBody": "Fallo al guardar automáticamente el archivo",
+  "appSaveErrorBodyMul": "Fallo al guardar automáticamente los archivos:",
   "appSettingsError": "Fallo al cargar la aplicación",
   "appSettingsErrorBody": "Se ha producido un fallo al cargar los ajustes de la aplicación. Por favor, vuelve a comprobar la URL o contacta con tu administrador.",
   "appNotSupportedError": "Tu navegador no soporta algunas de las características necesarias que utilizamos.",
@@ -363,7 +413,7 @@
   "setGenNewVersion": "Nueva versión de la aplicación publicada y descargada",
   "setGenReleaseNotes": "Ver notas de versión",
   "setGenReloadToUpdate": "Recarga para actualizar",
-  "setGenUpdateManual": "Hay una nueva versión disponible. Se comprobará si hay actualizaciones y se instalarán automáticamente, pero no se puede auto-actualizar desde tu versión.",
+  "setGenUpdateManual": "Hay una nueva versión disponible. Se comprobará si hay actualizaciones y se instalarán automáticamente, pero no se puede actualizar automáticamente desde tu versión.",
   "setGenDownloadUpdate": "Descargar actualización",
   "setGenUpdateAuto": "Descargar e instalar automáticamente",
   "setGenUpdateCheck": "Comprobar pero no descargar",
@@ -407,7 +457,7 @@
   "setGenColorfulIcons": "Iconos propios de color en la lista",
   "setGenUseMarkdown": "Estilo de texto en notas",
   "setGenUseGroupIconForEntries": "Usar automáticamente el icono de grupo para entradas nuevas",
-  "setGenDirectAutotype": "Si sólo se encuentra una única entrada, seleccionarla automáticamente para el autocompletado.",
+  "setGenDirectAutotype": "Si sólo se encuentra una única entrada, se seleccionará automáticamente para el autocompletado.",
   "setGenFunction": "Función",
   "setGenAutoSyncOnClose": "Guardar y sincronizar automáticamente al cerrar",
   "setGenAutoSyncTimer": "Guardar y sincronizar periódicamente de forma automática",
@@ -418,7 +468,7 @@
   "setGenRememberKeyFilesData": "Guardar en el almacenamiento interno",
   "setGenRememberKeyFilesPath": "Recordar sólo la ruta de archivos llave",
   "setGenLockInactive": "Si la aplicación está inactiva",
-  "setGenNoAutoLock": "No auto-bloquear",
+  "setGenNoAutoLock": "No bloquear automáticamente",
   "setGenLockMinutes": "En {} minutos",
   "setGenLockHour": "En una hora",
   "setGenLockHours": "En {} horas",
@@ -428,7 +478,7 @@
   "setGenClearSeconds": "En {} segundos",
   "setGenClearMinute": "En un minuto",
   "setGenMinInstead": "Minimizar la aplicación en vez de cerrarla",
-  "setGenLock": "Auto bloqueo",
+  "setGenLock": "Bloqueo automático",
   "setGenLockMinimize": "Cuando la aplicación está minimizada",
   "setGenLockCopy": "Al copiar contraseña",
   "setGenLockAutoType": "En autocompletado",
@@ -482,13 +532,13 @@
   "setFileBackupNowWorking": "Trabajando ...",
   "setFileBackupError": "Fallo al respaldar",
   "setFileBackupErrorDescription": "Fallo al guardar la copia de respaldo",
-  "setFileBackupErrorIsDir": "Ruta de respaldo inválida",
-  "setFileBackupErrorIsDirDescription": "La ruta de respaldo parece apuntar a una carpeta. Por favor, cambia la ruta a un nombre de fichero dentro de una carpeta.",
+  "setFileBackupErrorIsDir": "Ruta de copia de respaldo inválida",
+  "setFileBackupErrorIsDirDescription": "La ruta de la copia de respaldo parece apuntar a una carpeta. Por favor, cambia la ruta a un nombre de fichero dentro de una carpeta.",
   "setFileBackupOnSave": "Cada vez que guardo el archivo",
   "setFileBackupDaily": "Diario",
   "setFileBackupWeekly": "Semanal",
   "setFileBackupMonthly": "Mensual",
-  "setFileBackupManually": "Manualmente, sin autorespaldo",
+  "setFileBackupManually": "Manualmente, sin respaldo automático",
   "setFileRounds": "Rondas de cifrado de clave",
   "setFileKdfParams": "Función de derivación de clave",
   "setFileKdfParamsIter": "Iteraciones",
@@ -569,7 +619,7 @@
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
-  "setAboutLicComment": "La aplicación en sí y todos los complementos incluidos que no son de dominio público están autorizados bajo la licencia MIT.",
+  "setAboutLicComment": "La aplicación en si y todos los complementos incluidos que no son de dominio público están autorizados bajo la licencia MIT.",
   "setAboutFirst": "Esta es una aplicación open-source creada por {}",
   "setAboutSecond": "y licenciada bajo {}.",
   "setAboutSource": "El código fuente e incidencias están en {}.",
