--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -1,4 +1,19 @@
 {
+  "error": "hiba",
+  "device": "Eszköz",
+  "menuSetDevices": "Eszközök",
+  "openChalRespHeader": "Kérés-Válasz",
+  "openChalRespLoading": "YubiKey lista betöltése",
+  "openChalRespSelectYubiKey": "Válaszd ki a használni kívánt YubiKey-t",
+  "openChalRespErrorEmpty": "Nem találtam YubiKey-t.",
+  "detMenuCopyOtp": "Egyszerhasználatos kód másolása",
+  "detOtpField": "Egyszerhasználatos kód",
+  "setFileDeviceSettings": "Beállítások",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Ne használjon YubiKey-t",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileRefreshYubiKeyList": "Lista frissítése",
+  "setDevicesTitle": "Eszközök",
   "months": [
     "Január",
     "Február",
