--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,4 +1,54 @@
 {
+  "error": "fout",
+  "device": "apparaat",
+  "menuSetDevices": "apparaten",
+  "openChalRespHeader": "Challenge-Response",
+  "openChalRespLoading": "Bezig met verzamelen van de lijst van Yubikeys",
+  "openChalRespSelectYubiKey": "Selecteer de Yubikey die je wilt gebruiken",
+  "openChalRespErrorEmpty": "Geen Yubikeys gevonden.",
+  "openChalRespErrorEmptyMac": "Is dit de eerste keer dat je deze feature gebruikt op macOS? Keyweb moet worden toegevoegd aan de input monitoring sectie van de beveiligingsinstellingen.",
+  "detMenuCopyOtp": "Kopieer de eenmalige code",
+  "detOtpField": "Eenmalige code",
+  "detOtpClickToTouch": "Klik om te genereren",
+  "detOtpGenerating": "Bezig met genereren...",
+  "detOtpTouch": "Raak je {} aan",
+  "setGenFieldLabelDblClickAutoType": "Automatisch invullen bij dubbelklikken van veldlabels",
+  "setFileExportRaw": "Bezig met exporteren van je wachtwoorden",
+  "setFileDeviceIntro": "Eenmalige codes van dit {} zal in de app worden weergegeven.",
+  "setFileExportRawBody": "De geëxporteerde lijst zal je wachtwoorden bevatten. Ze zullen niet versleuteld zijn. Wil je doorgaan?",
+  "setFileDeviceSettings": "Instellingen",
+  "setFileYubiKey": "Yubikey",
+  "setFileDontUseYubiKey": "Geen Yubikey gebruiken",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileRefreshYubiKeyList": "Ververs de lijst",
+  "setFileYubiKeyBody": "Een YubiKey als onderdeel van de hoofdsleutel gebruiken is gevaarlijk en je kunt de toegang tot je wachtwoorden verliezen als er iets misgaat. Heb je een back-up van je bestand gemaakt voordat je deze instelling wijzigde?",
+  "setFileYubiKeyErrorEmptyMac": "Het lijkt erop dat er een YubiKey is aangesloten, maar deze is niet zichtbaar. Om toegang te krijgen tot YubiKeys moet KeeWeb worden toegevoegd aan de beveiligingsinstellingen, sectie Input Monitoring.",
+  "setDevicesTitle": "Apparaten",
+  "setDevicesEnableUsb": "Interactie met USB-apparaten mogelijk maken",
+  "setDevicesYubiKeyIntro": "Het is raadzaam om {} te lezen voordat je een YubiKey gebruikt.",
+  "setDevicesYubiKeyIntroLink": "dit document",
+  "setDevicesYubiKeyToolsDesc": "Om YubiKey te kunnen gebruiken, moet je het hulpmiddel {} installeren.",
+  "setDevicesYubiKeyToolsDesc2": "{} voor meer informatie over dit hulpmiddel.",
+  "setDevicesYubiKeyToolsDescLink": "Klik hier",
+  "setDevicesYubiKeyToolsStatusChecking": "Controleren of {} is geïnstalleerd",
+  "setDevicesYubiKeyToolsStatusOk": "{} is geïnstalleerd",
+  "setDevicesYubiKeyToolsStatusError": "{} is geïnstalleerd of niet functioneel",
+  "setDevicesYubiKeyOtpTitle": "Eenmalige codes",
+  "setDevicesYubiKeyOtpDesc": "YubiKey kan worden gebruikt om eenmalige codes voor verschillende diensten te genereren.",
+  "setDevicesYubiKeyOtpShowIcon": "Toon het pictogram op het startscherm",
+  "setDevicesYubiKeyOtpAutoOpen": "Automatisch eenmalige codes laden wanneer er geopende bestanden zijn",
+  "setDevicesYubiKeyOtpMatchEntries": "Toon overeenkomende eenmalige codes in items",
+  "setDevicesYubiKeyChalRespTitle": "Challenge-respons",
+  "setDevicesYubiKeyChalRespDesc": "Het is ook mogelijk om een YubiKey te gebruiken in de challenge-responsmodus, zodat een stuk privésleutel dat wordt gebruikt om bestanden te versleutelen op een YubiKey staat.",
+  "setDevicesYubiKeyChalRespShow": "Toon de optie om een YubiKey te gebruiken bij het openen van bestanden",
+  "setDevicesYubiKeyStuckWorkaround": "Sluit de YubiKey opnieuw aan als deze tijdens het laden lijkt te blokkeren",
+  "setDevicesYubiKeyRememberChalResp": "Onthoud challenge-respons zolang de app open is",
+  "yubiKeyStuckError": "De YubiKey lijkt te blokkeren, automatische reparatie kan worden ingeschakeld in app-instellingen.",
+  "yubiKeyNoKeyHeader": "YubiKey vereist",
+  "yubiKeyNoKeyBody": "Voer je YubiKey in met serienummer {}",
+  "yubiKeySlot": "slot",
+  "yubiKeyTouchRequestedHeader": "Raak je YubiKey aan",
+  "yubiKeyTouchRequestedBody": "Raak je YubiKey aan met serienummer {}",
   "months": [
     "januari",
     "februari",
@@ -335,7 +385,7 @@
   "autoTypeSelectionHintAction": "Voer alleen het wachtwoord in",
   "autoTypeSelectionHintOpt": "Voer alleen gebruikersnaam in",
   "autoTypeSelectionHintShift": "Andere velden",
-  "autoTypeSelectionOtp": "Eenmalig wachtwoord",
+  "autoTypeSelectionOtp": "Eenmalige code",
   "appSecWarn": "Onveilig!",
   "appSecWarnBody1": "Je hebt de app geladen met een onveilige verbinding. Iemand kan mogelijk nu meekijken en je wachtwoorden stelen. Wij adviseren je te stoppen tenzij je je bewust bent van de mogelijke consequenties.",
   "appSecWarnBody2": "Ja, je database is versleuteld, maar dit is geen garantie dat de app niet gewijzigd is onderweg naar jou toe.",
