--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -1,4 +1,54 @@
 {
+  "error": "błąd",
+  "device": "Urządzenie",
+  "menuSetDevices": "Urządzenia",
+  "openChalRespHeader": "Wyzwanie-odpowiedź",
+  "openChalRespLoading": "Ładowanie listy urządzeń YubiKey",
+  "openChalRespSelectYubiKey": "Wybierz YubiKey, którego chcesz użyć",
+  "openChalRespErrorEmpty": "Nie znaleziono urządzeń YubiKey.",
+  "openChalRespErrorEmptyMac": "Po raz pierwszy korzystasz z tej funkcji w systemie macOS? KeeWeb musi zostać dodany do sekcji Monitorowanie danych wejściowych w ustawieniach bezpieczeństwa.",
+  "detMenuCopyOtp": "Skopiuj kod jednorazowy",
+  "detOtpField": "Kod jednorazowy",
+  "detOtpClickToTouch": "Kliknij, aby wygenerować",
+  "detOtpGenerating": "Generowanie...",
+  "detOtpTouch": "Dotknij {}",
+  "setGenFieldLabelDblClickAutoType": "Autowpisywanie po dwukrotnym kliknięciu etykiet pól",
+  "setFileExportRaw": "Eksportowanie haseł",
+  "setFileDeviceIntro": "Kody jednorazowe z {} będą wyświetlane w aplikacji.",
+  "setFileExportRawBody": "Wyeksportowany plik będzie zawierał twoje hasła, nie będą tam szyfrowane. Czy chcesz kontynuować?",
+  "setFileDeviceSettings": "Ustawienia",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Nie używaj YubiKey",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileRefreshYubiKeyList": "Odśwież listę",
+  "setFileYubiKeyBody": "Używanie YubiKey jako klucza głównego jest niebezpieczne i możesz stracić dostęp do swoich haseł, jeśli coś pójdzie nie tak. Czy wykonałeś kopię zapasową pliku przed zmianą tego ustawienia?",
+  "setFileYubiKeyErrorEmptyMac": "Wygląda na to, że podłączony jest YubiKey, ale nie jest widoczny. Aby uzyskać dostęp do urządzeń YubiKey, należy dodać KeeWeb do sekcji Monitorowanie danych wejściowych w ustawieniach bezpieczeństwa.",
+  "setDevicesTitle": "Urządzenia",
+  "setDevicesEnableUsb": "Włącz interakcję z urządzeniami USB",
+  "setDevicesYubiKeyIntro": "Zaleca się przeczytanie {} przed użyciem YubiKey.",
+  "setDevicesYubiKeyIntroLink": "ten dokument",
+  "setDevicesYubiKeyToolsDesc": "Aby móc korzystać z YubiKey w tym trybie, musisz zainstalować narzędzie o nazwie {}.",
+  "setDevicesYubiKeyToolsDesc2": "{}, aby uzyskać więcej informacji o tym narzędziu.",
+  "setDevicesYubiKeyToolsDescLink": "Kliknij tutaj",
+  "setDevicesYubiKeyToolsStatusChecking": "Sprawdzanie, czy {} jest zainstalowany",
+  "setDevicesYubiKeyToolsStatusOk": "{} jest zainstalowany",
+  "setDevicesYubiKeyToolsStatusError": "{} nie jest zainstalowany lub nie działa",
+  "setDevicesYubiKeyOtpTitle": "Kody jednorazowe",
+  "setDevicesYubiKeyOtpDesc": "YubiKey może służyć do generowania kodów jednorazowych dla różnych usług.",
+  "setDevicesYubiKeyOtpShowIcon": "Pokaż ikonę na ekranie startowym",
+  "setDevicesYubiKeyOtpAutoOpen": "Automatycznie ładuj kody jednorazowe, gdy są otwarte pliki",
+  "setDevicesYubiKeyOtpMatchEntries": "Pokaż pasujące kody jednorazowe we wpisach",
+  "setDevicesYubiKeyChalRespTitle": "Wyzwanie-odpowiedź",
+  "setDevicesYubiKeyChalRespDesc": "Możliwe jest również użycie YubiKey w trybie wyzwanie-odpowiedź, dzięki czemu fragment klucza prywatnego, służącego do szyfrowania plików, znajduje się na YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Pokaż opcję używania YubiKey podczas otwierania plików",
+  "setDevicesYubiKeyStuckWorkaround": "Podłącz ponownie YubiKey, jeśli wydaje się, że zawiesił się podczas ładowania",
+  "setDevicesYubiKeyRememberChalResp": "Pamiętaj wyzwanie-odpowiedź, gdy aplikacja jest otwarta",
+  "yubiKeyStuckError": "Wygląda na to, że YubiKey zawiesił się, w ustawieniach aplikacji można włączyć automatyczną naprawę.",
+  "yubiKeyNoKeyHeader": "Wymagany YubiKey",
+  "yubiKeyNoKeyBody": "Włóż YubiKey o numerze seryjnym {}",
+  "yubiKeySlot": "gniazdo",
+  "yubiKeyTouchRequestedHeader": "Dotknij YubiKey",
+  "yubiKeyTouchRequestedBody": "Proszę dotknąć YubiKey o numerze seryjnym {}",
   "months": [
     "styczeń",
     "luty",
