--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -1,4 +1,54 @@
 {
+  "error": "hata",
+  "device": "cihaz",
+  "menuSetDevices": "Cihazlar",
+  "openChalRespHeader": "Karşılama Yanıtı",
+  "openChalRespLoading": "YubiKeys listesi yükleniyor",
+  "openChalRespSelectYubiKey": "Kullanmak istediğiniz bir YubiKey seçin",
+  "openChalRespErrorEmpty": "YubiKey bulunamadı.",
+  "openChalRespErrorEmptyMac": "MacOS'ta bu özelliği ilk kez mi kullanıyorsunuz? Güvenlik ayarlarının Giriş İzleme bölümüne KeeWeb eklenmelidir.",
+  "detMenuCopyOtp": "Tek seferlik kodu kopyala",
+  "detOtpField": "Tek seferlik kod",
+  "detOtpClickToTouch": "Üretmek için tıkla",
+  "detOtpGenerating": "Üretiliyor...",
+  "detOtpTouch": "Dokunun {}",
+  "setGenFieldLabelDblClickAutoType": "Alan etiketlerine çift tıklayınca otomatik yaz",
+  "setFileExportRaw": "Parolalar dışa aktarılıyor",
+  "setFileDeviceIntro": "Bu {} adresinden tek seferlik kodlar uygulamada görüntülenecektir.",
+  "setFileExportRawBody": "Dışa aktarılan dosya parolalarınızı içerecek, orada şifrelenmeyecek. Devam etmek ister misiniz?",
+  "setFileDeviceSettings": "Ayarlar",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "YubiKey kullanma",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileRefreshYubiKeyList": "Listeyi yenile",
+  "setFileYubiKeyBody": "Ana anahtarın bir parçası olarak YubiKey kullanmak tehlikelidir ve bir şeyler ters giderse parolalarına erişiminizi kaybedebilirsiniz. Bu ayarı değiştirmeden önce dosyanızı yedeklediniz mi?",
+  "setFileYubiKeyErrorEmptyMac": "Takılı bir YubiKey var gibi görünüyor, ancak görünmüyor. YubiKeys'e erişmek için güvenlik ayarlarının Giriş İzleme bölümüne KeeWeb eklenmelidir.",
+  "setDevicesTitle": "Cihazlar",
+  "setDevicesEnableUsb": "USB cihazlarıyla etkileşimi etkinleştir",
+  "setDevicesYubiKeyIntro": "YubiKey kullanmadan önce {} okumanız önerilir.",
+  "setDevicesYubiKeyIntroLink": "bu belge",
+  "setDevicesYubiKeyToolsDesc": "Bu kipte YubiKey kullanabilmek için {} adlı bir araç kurmanız gerekir.",
+  "setDevicesYubiKeyToolsDesc2": "{} bu araç hakkında daha fazla bilgi almak için.",
+  "setDevicesYubiKeyToolsDescLink": "Buraya tıkla",
+  "setDevicesYubiKeyToolsStatusChecking": "{} kurulu olup olmadığını kontrol et",
+  "setDevicesYubiKeyToolsStatusOk": "{} kuruldu",
+  "setDevicesYubiKeyToolsStatusError": "{} kurulu değil veya çalışmıyor",
+  "setDevicesYubiKeyOtpTitle": "Tek seferlik kodlar",
+  "setDevicesYubiKeyOtpDesc": "YubiKey, farklı hizmetler için tek seferlik kodlar oluşturmak için kullanılabilir.",
+  "setDevicesYubiKeyOtpShowIcon": "Başlangıç ​​ekranında simgeyi göster",
+  "setDevicesYubiKeyOtpAutoOpen": "Açık dosyalar olduğunda tek seferlik kodları otomatik olarak yükle",
+  "setDevicesYubiKeyOtpMatchEntries": "Girdilerde eşleşen tek seferlik kodları göster",
+  "setDevicesYubiKeyChalRespTitle": "Karşılama Yanıtı",
+  "setDevicesYubiKeyChalRespDesc": "Karşılama yanıtı kipinde bir YubiKey kullanmak da mümkündür, böylece dosyaları şifrelemek için kullanılan özel anahtar parçası YubiKey'de bulunur.",
+  "setDevicesYubiKeyChalRespShow": "Dosyaları açarken YubiKey kullanım seçeneğini göster",
+  "setDevicesYubiKeyStuckWorkaround": "Yükleme sırasında açılmıyor gibi görünüyorsa YubiKey'i yeniden bağlayın",
+  "setDevicesYubiKeyRememberChalResp": "Uygulama açıkken karşılama yanıtını hatırlayın",
+  "yubiKeyStuckError": "YubiKey takılmış gibi görünüyor, otomatik onarım uygulama ayarlarında etkinleştirilebilir.",
+  "yubiKeyNoKeyHeader": "YubiKey gerekli",
+  "yubiKeyNoKeyBody": "Lütfen YubiKey'nizi {} seri numarasıyla ekleyin",
+  "yubiKeySlot": "yuva",
+  "yubiKeyTouchRequestedHeader": "YubiKey'e dokunun",
+  "yubiKeyTouchRequestedBody": "Lütfen YubiKey'nize {} seri numarası ile dokunun",
   "months": [
     "Ocak",
     "Şubat",
@@ -590,6 +640,8 @@
   "dropboxAppKey": "Dropbox uygulama anahtarı",
   "dropboxAppKeyDesc": "Anahtarı Dropbox uygulamanızdan kopyalayın (Geliştirici ayarları)",
   "dropboxAppKeyHint": "uygulama anahtarınız",
+  "dropboxAppSecret": "Dropbox uygulama gizli kodu",
+  "dropboxAppSecretDesc": "Gizli kodu uygulama anahtarının yanında bulabilirsiniz",
   "dropboxFolder": "Uygulama klasörü",
   "dropboxFolderDesc": "Uygulamanız tüm Dropbox'lara bağlıysa (uygulama klasörü değil), klasörü kdbx dosyalarınızla buraya ayarlayın",
   "dropboxFolderSettingsDesc": "Dropbox'ınızda dosyaların depolanacağı herhangi bir klasörü seçin (öntanımlı olarak kök klasör)",
