--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -2,18 +2,53 @@
   "error": "hiba",
   "device": "Eszköz",
   "menuSetDevices": "Eszközök",
-  "openChalRespHeader": "Kérés-Válasz",
+  "openChalRespHeader": "Kihívás-válasz",
   "openChalRespLoading": "YubiKey lista betöltése",
   "openChalRespSelectYubiKey": "Válaszd ki a használni kívánt YubiKey-t",
   "openChalRespErrorEmpty": "Nem találtam YubiKey-t.",
+  "openChalRespErrorEmptyMac": "Először használja ezt a lehetőséget MacOS-en? A KeeWeb-et hozzá kell adni az Apple menü / rendszerbeállítások / biztonság és adatvédelem lehetőség, adatvédelem fülén, a bemenet figyeléséhez.",
   "detMenuCopyOtp": "Egyszerhasználatos kód másolása",
   "detOtpField": "Egyszerhasználatos kód",
+  "detOtpClickToTouch": "Generáláshoz kattintson",
+  "detOtpGenerating": "Generálás...",
+  "detOtpTouch": "Érintse meg a {}-t",
+  "setGenFieldLabelDblClickAutoType": "Automatikus gépelés, mező feliratok dupla-kattintására",
+  "setFileExportRaw": "Jelszavai exportálása",
+  "setFileDeviceIntro": "Az egyszeri kódok erről a(z) {} eszközről, megjelennek majd az alkalmazásban.",
+  "setFileExportRawBody": "Az exportált fájl tartalmazni fogja a jelszavait, és ezek nem lesznek titkosítva. Biztosan folytatni szeretné?",
   "setFileDeviceSettings": "Beállítások",
   "setFileYubiKey": "YubiKey",
   "setFileDontUseYubiKey": "Ne használjon YubiKey-t",
   "setFileYubiKeyHeader": "YubiKey",
   "setFileRefreshYubiKeyList": "Lista frissítése",
+  "setFileYubiKeyBody": "Egy YubiKey használata a mesterkulcs részeként veszélyes. Elveszítheti a hozzáférését a jelszavaihoz, ha valami balul üt ki. Készített biztonsági mentést a fájljáról mielőtt megváltoztatná ezt a beállítást?",
+  "setFileYubiKeyErrorEmptyMac": "Úgy tűnik, hogy egy YubiKey van csatlakoztatva, de nem látható. A KeeWeb-et hozzá kell adni az Apple menü / rendszerbeállítások / biztonság és adatvédelem lehetőség, adatvédelem fülén, a bemenet figyeléséhez, hogy hozzáférhessen a YubiKey-ekhez.",
   "setDevicesTitle": "Eszközök",
+  "setDevicesEnableUsb": "USB eszközökkel való együttműködés engedélyezése",
+  "setDevicesYubiKeyIntro": "Ajánlott elolvasni {} mielőtt használ egy YubiKey-t.",
+  "setDevicesYubiKeyIntroLink": "ezt a dokumentumot",
+  "setDevicesYubiKeyToolsDesc": "Hogy ebben az üzemmódban tudja használni a YubiKey-t, telepítenie kell egy {} nevű eszközt.",
+  "setDevicesYubiKeyToolsDesc2": "{}, hogy többet tudjon meg  erről az eszközről.",
+  "setDevicesYubiKeyToolsDescLink": "Kattintson ide",
+  "setDevicesYubiKeyToolsStatusChecking": "{} telepítésének ellenőrzése",
+  "setDevicesYubiKeyToolsStatusOk": "{} telepítve van",
+  "setDevicesYubiKeyToolsStatusError": "{} nincs telepítve, vagy nem működik",
+  "setDevicesYubiKeyOtpTitle": "Egyszeri kódok",
+  "setDevicesYubiKeyOtpDesc": "A YubiKey, különböző szolgáltatásokhoz, egyszeri kódok generálására használható.",
+  "setDevicesYubiKeyOtpShowIcon": "Mutassa a kezdőképernyőn az ikont",
+  "setDevicesYubiKeyOtpAutoOpen": "Amikor vannak megnyitott fájlok, automatikusan töltse be az egyszeri kódokat",
+  "setDevicesYubiKeyOtpMatchEntries": "Mutassa a bejegyzésekben az egyező egyszeri kódokat",
+  "setDevicesYubiKeyChalRespTitle": "Kihívás-válasz",
+  "setDevicesYubiKeyChalRespDesc": "Az is lehetséges, hogy kihívás-válasz üzemmódban használja a YubiKey-t. Így tehát a privát kulcs egy része van használva arra, hogy YubiKey-hez tartozó fájlokat titkosítson.",
+  "setDevicesYubiKeyChalRespShow": "Fájlok megnyitásakor, mutassa a YubiKey használatának lehetőségét",
+  "setDevicesYubiKeyStuckWorkaround": "Csatlakoztassa újra a YubiKey-t, ha úgy tűnik, hogy megakadt a betöltés során",
+  "setDevicesYubiKeyRememberChalResp": "Emlékezzen a kihívás-válaszra amíg az alkalmazás meg van nyitva",
+  "yubiKeyStuckError": "A YubiKey úgy tűnik, hogy elakadt, az automatikus javítás engedélyezhető az alkalmazás beállításaiban.",
+  "yubiKeyNoKeyHeader": "YubiKey szükséges",
+  "yubiKeyNoKeyBody": "Kérem helyezze be a {} szériaszámú Yubikey-t",
+  "yubiKeySlot": "csatlakozó",
+  "yubiKeyTouchRequestedHeader": "Érintse meg a YubiKey-t",
+  "yubiKeyTouchRequestedBody": "Kérem érintse meg a {} szériaszámú YubiKey-t",
   "months": [
     "Január",
     "Február",
@@ -299,7 +334,7 @@
   "detMenuAddField": "Hozzáadás {}",
   "detMenuCopyPassword": "Jelszó másolása",
   "detMenuCopyUser": "Felhasználónév másolása",
-  "detSetupOtp": "Egyszer használatos jelszó",
+  "detSetupOtp": "Egyszeri kódok",
   "detClone": "Másolat készítése",
   "detCopyEntryToClipboard": "Minden mező másolása",
   "detClonedName": "Másol",
@@ -328,7 +363,7 @@
   "detOtpQrError": "QR-kód beolvasási hiba",
   "detOtpQrErrorBody": "Sajnálom, nem tudtam olvasni a QR-kódot, kérem próbálja újra, vagy a hiba részleteinek megadásával vegye fel a kapcsolatot az alkalmazás szerzőivel.",
   "detOtpQrWrong": "Rossz QR-kód",
-  "detOtpQrWrongBody": "A QR-kódját sikeresen beolvastam, de nem tartalmaz egyszer használatos jelszó adatot.",
+  "detOtpQrWrongBody": "A QR-kódja sikeresen be lett olvasva, de nem tartalmaz egyszeri kód adatot.",
   "detLockField": "Zárolja ezt a mezőt, tehát a tartalma nem kereshető és nem látható. A tartalom megjelenítése kizárólag rákattintással lehetséges.",
   "detUnlockField": "Megszünteti a zárolást, tartalmát azonnal kereshetővé és láthatóvá teszi",
   "detRevealField": "Felfed",
@@ -350,7 +385,7 @@
   "autoTypeSelectionHintAction": "Csak a jelszót írja be",
   "autoTypeSelectionHintOpt": "Csak a felhasználói nevet írja be",
   "autoTypeSelectionHintShift": "Egyéb mezők",
-  "autoTypeSelectionOtp": "Egyszer használatos jelszó",
+  "autoTypeSelectionOtp": "Egyszeri kód",
   "appSecWarn": "Nem biztonságos!",
   "appSecWarnBody1": "Ezt az alkalmazást nem biztonságos kapcsolaton keresztül töltötte be. Valaki megfigyelheti és ellophatja a jelszavait. Erősen javasoljuk, hogy csak akkor folytassa, ha pontosan tudja, hogy mit csinál.",
   "appSecWarnBody2": "Igen, az adatbázisa titkosított, de senki nem garantálhatja azt, hogy az alkalmazás nem lett módosítva letöltés közben.",
@@ -605,6 +640,8 @@
   "dropboxAppKey": "Dropbox alkalmazás kulcs",
   "dropboxAppKeyDesc": "Másolja ide a kulcsot a Dropbox alkalmazásából (Fejlesztői beállítások)",
   "dropboxAppKeyHint": "az Ön app kulcsa",
+  "dropboxAppSecret": "Dropbox app secret",
+  "dropboxAppSecretDesc": "Az app secret, az app key mellett található",
   "dropboxFolder": "Alkalmazás mappa",
   "dropboxFolderDesc": "Amennyiben az alkalmazás a teljes Dropbox-hoz lett kapcsolva (nem alkalmazás mappához), adja meg a a kdbx fájljait tartalmazó mappát.",
   "dropboxFolderSettingsDesc": "Adja meg a Dropbox mappát, ahol a fájlok tárolva lesznek (gyökérmappa az alapértelmezett )",
