--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -1,4 +1,54 @@
 {
+  "error": "erreur",
+  "device": "appareil",
+  "menuSetDevices": "Appareils",
+  "openChalRespHeader": "Challenge-Réponse",
+  "openChalRespLoading": "Chargement de la liste des YubiKeys",
+  "openChalRespSelectYubiKey": "Sélectionnez une YubiKey que vous voudriez utiliser",
+  "openChalRespErrorEmpty": "Pas de clé YubiKey trouvée.",
+  "openChalRespErrorEmptyMac": "Première fois que vous utilisez cette fonctionnalité sur MacOS ? KeeWeb doit avoir été autorisé dans la section \"Surveillance de l’entrée\" des paramètres de sécurité.",
+  "detMenuCopyOtp": "Copier le code à usage unique",
+  "detOtpField": "Code à usage unique",
+  "detOtpClickToTouch": "Cliquer pour générer",
+  "detOtpGenerating": "Création...",
+  "detOtpTouch": "Touchez votre {}",
+  "setGenFieldLabelDblClickAutoType": "Remplissage auto par double clic sur les noms de champ",
+  "setFileExportRaw": "Exporter vos mots de passe",
+  "setFileDeviceIntro": "Les codes à usage unique de cette {} vont être affichés dans l'application.",
+  "setFileExportRawBody": "Le fichier exporté contiendra vos mots de passe, il n'y seront plus cryptés. Voulez vous continuer ?",
+  "setFileDeviceSettings": "Paramètres",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "Ne pas utiliser une YubiKey",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileRefreshYubiKeyList": "Rafraichir la liste",
+  "setFileYubiKeyBody": "Utiliser une YubiKey comme partie de la clé maitre est dangeureux, et vous risquez de perdre l'accès à vos mots de passe si quelque chose tourne mal. Avez vous réalisé une sauvegarde de votre fichier avant de modifier les paramètres ?",
+  "setFileYubiKeyErrorEmptyMac": "Il semble qu'il y a une YubiKey connectée, mais elle est invisible. KeeWeb doit avoir été autorisé dans la section \"Surveillance de l’entrée\" des paramètres de sécurité pour se connecter à la YubiKey.",
+  "setDevicesTitle": "Appareils",
+  "setDevicesEnableUsb": "Autoriser les interactions avec les appareils USB",
+  "setDevicesYubiKeyIntro": "Il est recommandé de lire {} avant d'utiliser une YubiKey.",
+  "setDevicesYubiKeyIntroLink": "ce document",
+  "setDevicesYubiKeyToolsDesc": "Pour permettre l'utilisation de YubiKey dans ce mode, vous devez installer un outil appelé {}.",
+  "setDevicesYubiKeyToolsDesc2": "{} pour avoir plus d'information sur cet outil.",
+  "setDevicesYubiKeyToolsDescLink": "Cliquez ici",
+  "setDevicesYubiKeyToolsStatusChecking": "Vérification si {} est installé",
+  "setDevicesYubiKeyToolsStatusOk": "{} est installé",
+  "setDevicesYubiKeyToolsStatusError": "{} n'est pas installé, ou ne fonctionne pas",
+  "setDevicesYubiKeyOtpTitle": "Codes à usage unique",
+  "setDevicesYubiKeyOtpDesc": "YubiKey peut être utilisé pour générer des codes à usage unique pour différents services.",
+  "setDevicesYubiKeyOtpShowIcon": "Afficher l'icône sur l'écran de démarrage",
+  "setDevicesYubiKeyOtpAutoOpen": "Charger automatiquement les codes à usage unique lorsqu'il y a des fichiers ouverts",
+  "setDevicesYubiKeyOtpMatchEntries": "Afficher les codes à usage unique qui correspondent dans les entrées",
+  "setDevicesYubiKeyChalRespTitle": "Challenge-Réponse",
+  "setDevicesYubiKeyChalRespDesc": "Il est aussi possible d'utiliser une YubiKey en mode Challenge-Réponse, afin qu'une partie de la clé privée utilisée pour crypter les fichiers provienne d'une YubiKey.",
+  "setDevicesYubiKeyChalRespShow": "Proposer l'option d'utiliser une YubiKey à l'ouverture des fichiers",
+  "setDevicesYubiKeyStuckWorkaround": "Reconnecter la YubiKey si elle semble bloquée au moment du chargement",
+  "setDevicesYubiKeyRememberChalResp": "Se souvenir du challenge-réponse le temps que l'application reste ouverte",
+  "yubiKeyStuckError": "La YubiKey semble coincée, la réparation automatique est activable dans les paramètres de l'application.",
+  "yubiKeyNoKeyHeader": "Une YubiKey est requise",
+  "yubiKeyNoKeyBody": "Merci d'insérer votre YubiKey avec le numéro de série {}",
+  "yubiKeySlot": "port",
+  "yubiKeyTouchRequestedHeader": "Touchez votre YubiKey",
+  "yubiKeyTouchRequestedBody": "Merci de toucher votre YubiKey avec le numéro de série {}",
   "months": [
     "Janvier",
     "Février",
@@ -45,7 +95,7 @@
     "Ven",
     "Sam"
   ],
-  "retToApp": "Retourner à l'appli",
+  "retToApp": "retour vers l'appli",
   "name": "nom",
   "icon": "icône",
   "title": "titre",
@@ -67,7 +117,7 @@
   "shortcuts": "Raccourcis",
   "help": "Aide",
   "settings": "Paramètres",
-  "plugins": "Modules",
+  "plugins": "Modules (plugins)",
   "ctrlKey": "ctrl",
   "shiftKey": "shift",
   "altKey": "alt",
@@ -87,7 +137,7 @@
   "menuEmptyTrash": "Vider la Corbeille",
   "menuEmptyTrashAlert": "Vider la Corbeille?",
   "menuEmptyTrashAlertBody": "Vous ne pourrez plus récupérer ces éléments",
-  "menuItemCollapsed": "Double-cliquer pour déplier",
+  "menuItemCollapsed": "Double-cliquez pour déplier",
   "menuRestoreApp": "Ouvrir {}",
   "menuQuitApp": "Quitter {}",
   "alertYes": "Oui",
@@ -185,7 +235,7 @@
   "searchOptions": "Options",
   "searchCase": "Respecte la casse",
   "searchRegex": "RegEx",
-  "searchRank": "Rang",
+  "searchRank": "Auto",
   "searchExact": "Exact",
   "openOpen": "Ouvrir",
   "openNew": "Nouveau",
@@ -201,9 +251,9 @@
   "openDropHere": "déposez les fichiers ici",
   "openFailedRead": "Échec lors de la lecture du fichier",
   "openNothingFound": "Aucun résultat",
-  "openNothingFoundBody": "Aucun fichier ne peut être ouvert.",
+  "openNothingFoundBody": "Nous n'avons trouvé aucun fichier convenable.",
   "openSelectFile": "Sélectionnez un fichier",
-  "openSelectFileBody": "Sélectionnez le fichier que vous voudriez ouvrir",
+  "openSelectFileBody": "Sélectionnez un fichier que vous voudriez ouvrir",
   "openPassFor": "Mot de passe pour",
   "openRemoveLastQuestion": "Supprimer le fichier local ?",
   "openRemoveLastQuestionBody": "Le fichier que vous voulez supprimer est sauvegardé dans l'appli. Le supprimer de façon définitive ?",
@@ -231,7 +281,7 @@
   "openListErrorBody": "Erreur au chargement de la liste des fichiers",
   "openShowAllFiles": "Tous les fichiers",
   "openFileNoCacheError": "Fichier non trouvé dans la mémoire cache. Cela peut arriver parce que le stockage du navigateur a été nettoyé. Pour ouvrir le fichier, supprimez-le de KeeWeb et ajoutez-le à nouveau.",
-  "detAttDownload": "Cliquer sur le bouton de pièce-jointe en pressant la touche Maj ou",
+  "detAttDownload": "Cliquez sur le bouton de pièce-jointe en pressant la touche Maj pour le télécharger ou",
   "detAttDelToRemove": "Supprimer pour enlever",
   "detAttSave": "Enregistrer sous",
   "detEmpty": "Vos mots de passe seront affichés ici",
@@ -253,8 +303,8 @@
   "detHistoryRevertAlertBody": "L'état courant sera sauvegardé dans l'historique.",
   "detHistoryDeleteAlert": "Supprimer cet état de l'historique ?",
   "detHistoryDeleteAlertBody": "Vous ne pourrez plus le restaurer.",
-  "detHistoryDiscardChangesAlert": "Oublier les changements fait à cette entrée ?",
-  "detHistoryDiscardChangesAlertBody": "Les changements non sauvegardés seront définitivement perdus.",
+  "detHistoryDiscardChangesAlert": "Ne pas sauvegarder les modifications de cette entrée ?",
+  "detHistoryDiscardChangesAlertBody": "Les changements non sauvegardés seront définitivement perdus, il n'y a pas de retour en arrière.",
   "detBackToList": "retour vers liste",
   "detSetIconColor": "Changer de couleur",
   "detSetIcon": "Changer d'icône",
@@ -284,7 +334,7 @@
   "detMenuAddField": "Ajouter {}",
   "detMenuCopyPassword": "Copier mot de passe",
   "detMenuCopyUser": "Copier nom",
-  "detSetupOtp": "Mots de passe à usage unique",
+  "detSetupOtp": "Codes à usage unique",
   "detClone": "Dupliquer",
   "detCopyEntryToClipboard": "Copier tous les champs",
   "detClonedName": "Copier",
@@ -335,7 +385,7 @@
   "autoTypeSelectionHintAction": "Entrez seulement le mot de passe",
   "autoTypeSelectionHintOpt": "Entrez seulement le compte",
   "autoTypeSelectionHintShift": "Autres champs",
-  "autoTypeSelectionOtp": "Mot de passe à usage unique",
+  "autoTypeSelectionOtp": "code à usage unique",
   "appSecWarn": "Non sécurisé !",
   "appSecWarnBody1": "Vous avez chargé cette appli avec une connexion non sécurisée. Quelqu'un peut vous observer et voler vos mots de passe. Nous vous recommandons fortement d'arrêter cette connexion, à moins que vous ne compreniez exactement ce que vous faites.",
   "appSecWarnBody2": "Oui, votre base est chiffrée mais personne ne peut garantir que l'application n'a pas été modifiée avant d'arriver à vous.",
@@ -350,8 +400,8 @@
   "appSaveErrorBody": "Échec sauvegarde auto du fichier",
   "appSaveErrorBodyMul": "Échec sauvegarde auto des fichiers",
   "appSettingsError": "Erreur lancement appli",
-  "appSettingsErrorBody": "Il y a eu une erreur au chargement des paramètres. Merci de revérifier l'URL de l'application ou contacter votre administrateur.",
-  "appNotSupportedError": "Votre navigateur n'est pas supporté.",
+  "appSettingsErrorBody": "Il y a eu une erreur lors du chargement des paramètres. Merci de revérifier l'URL de l'application ou contacter votre administrateur.",
+  "appNotSupportedError": "Votre navigateur n'est pas compatible avec certaines fonctionnalités importantes que nous utilisons.",
   "appTabWarn": "Trop d'onglets",
   "appTabWarnBody": "KeeWeb ne peut être utilisé dans 2 onglets de navigateurs simultanément. Fermer cet onglet, s'il vous plait.",
   "appRightsAlert": "Protéger l'appli KeeWeb",
@@ -363,7 +413,7 @@
   "setGenNewVersion": "Une nouvelle version a été téléchargée",
   "setGenReleaseNotes": "Voir les notes de version",
   "setGenReloadToUpdate": "Recharger pour mettre à jour",
-  "setGenUpdateManual": "Une nouvelle version est disponible. Elle vérifiera les mises à jour et les installera automatiquement, mais une mise à jour automatique à partir de votre version n'est pas possible.",
+  "setGenUpdateManual": "Une nouvelle version est disponible. Elle vérifiera les mises à jour et les installera automatiquement, mais cette mise à jour automatique à partir de votre version n'est pas possible.",
   "setGenDownloadUpdate": "Télécharger mise à jour",
   "setGenUpdateAuto": "Télécharger et installer automatiquement",
   "setGenUpdateCheck": "Vérifier mais ne pas installer",
@@ -579,7 +629,7 @@
   "setHelpProblems1": "Si quelque chose ne va pas, merci de {}",
   "setHelpProblems2": "ou {}",
   "setHelpOpenIssue": "faire connaître le problème sur GitHub",
-  "setHelpContactLink": "contacter directement un développeur",
+  "setHelpContactLink": "contactez le développeur directement",
   "setHelpAppInfo": "Information",
   "setHelpOtherPlatforms": "Autres plateformes",
   "setHelpDesktopApps": "Applis Desktop",
