--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -334,7 +334,7 @@
   "detMenuAddField": "Dodaj {}",
   "detMenuCopyPassword": "Skopiuj hasło",
   "detMenuCopyUser": "Skopiuj użytkownika",
-  "detSetupOtp": "Hasła jednorazowe",
+  "detSetupOtp": "Kody jednorazowe",
   "detClone": "Stwórz kopię",
   "detCopyEntryToClipboard": "Skopiuj wszystkie pola",
   "detClonedName": "Kopia",
@@ -363,7 +363,7 @@
   "detOtpQrError": "Błąd skanowania kodu QR",
   "detOtpQrErrorBody": "Wybacz, nie możemy odczytać kodu QR. Proszę spróbować ponownie albo skontaktować się z autorami aplikacji wraz z informacjami o błędach.",
   "detOtpQrWrong": "Nieprawidłowy kod QR",
-  "detOtpQrWrongBody": "Twój kod QR został pomyślnie przeskanowany, ale nie zawiera danych hasła jednorazowego.",
+  "detOtpQrWrongBody": "Twój kod QR został pomyślnie zeskanowany, ale nie zawiera danych kodu jednorazowego.",
   "detLockField": "Zablokuj to pole, więc jego zawartość nie będzie widoczna i dostępna do wyszukiwania. Wyświetlanie treści wymaga jawnego kliknięcia.",
   "detUnlockField": "Odblokuj to pole, dzięki czemu jego treść będzie natychmiast widoczna i dostępna do wyszukiwania",
   "detRevealField": "Ujawnij",
@@ -385,7 +385,7 @@
   "autoTypeSelectionHintAction": "Wpisz tylko hasło",
   "autoTypeSelectionHintOpt": "Wpisz tylko nazwę użytkownika",
   "autoTypeSelectionHintShift": "Inne pola",
-  "autoTypeSelectionOtp": "Hasło jednorazowe",
+  "autoTypeSelectionOtp": "Kod jednorazowy",
   "appSecWarn": "Niezabezpieczone!",
   "appSecWarnBody1": "Aplikację załadowano z niezabezpieczonym połączeniem. Ktoś może cię obserwować i ukraść twoje hasła. Zdecydowanie zalecamy przerwanie pracy, chyba że wyraźnie zrozumiesz, co robisz.",
   "appSecWarnBody2": "Tak, twoja baza danych jest zaszyfrowana, ale nikt nie może zagwarantować, że aplikacja nie została zmodyfikowana w drodze do ciebie.",
